syntax = "proto3";

import "collections.proto";

package solvio;

service CollectionsInternal {
  rpc Get (GetCollectionInfoRequestInternal) returns (GetCollectionInfoResponse) {}
}

message GetCollectionInfoRequestInternal {
  GetCollectionInfoRequest get_collectionInfoRequest = 1;
  uint32 shard_id = 2;
}